Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/enum/FauxEnum1.out
FauxEnum1.java:10:8: compiler.err.enum.no.subclassing
- compiler.note.unchecked.filename: FauxEnum1.java
- compiler.note.unchecked.recompile
1 error
